--- a/views/media.pug
+++ b/views/media.pug
@@ -66,7 +66,9 @@ block content
 
                 video#media_player.display-element(playsinline poster=`${serverToUse}/${upload.uploader.channelUrl}/${upload.thumbnails.generated || upload.thumbnails.medium}` controls='', style="max-width:100%;background-color:black;")
                     // to
-                    source.video-source(src=`${serverToUse}/${upload.uploader.channelUrl}/${upload.uniqueTag}.mp4`, type='video/mp4')
+                    source(src=`${serverToUse}/${upload.uploader.channelUrl}/${upload.uniqueTag}.mp4`, size='original', type='video/mp4')
+                    source(src=`${serverToUse}/${upload.uploader.channelUrl}/${upload.uniqueTag}-144.mp4`, size='144', type='video/mp4')
+                    //source.video-source(src=`${serverToUse}/${upload.uploader.channelUrl}/${upload.uniqueTag}.mp4`, type='video/mp4')
                     //source(src=upload.uploadUrl, type='video/mp4')
 
             // if it's an audio
@@ -569,9 +571,9 @@ block extra_footer_js
 
   include ./mediaPlayerPartials/reportUploadFunctionalityJs
 
-  include ./mediaPlayerPartials/changeQualityJs
-
-  include ./mediaPlayerPartials/changeUserDefaultQualityJs
+  //include ./mediaPlayerPartials/changeQualityJs
+  //
+  //include ./mediaPlayerPartials/changeUserDefaultQualityJs
 
   include mediaPlayerPartials/creditFunctionalityJs
 
