--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -65,7 +65,7 @@ script.
     autoplay: autoplay,
     clickToPlay: true,
     speed: {selected: 1, options: [0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]},
-    quality: { default: 144, options: [4320, 2880, 2160, 1440, 1080, 720, 576, 480, 360, 240] },
+    quality: { default: 144, options: [360, 144] },
     controls: ['play-large', 'play','progress', 'current-time', 'duration', 'rewind', 'fast-forward', 'mute', 'volume', 'settings', 'fullscreen'],
     settings: ['speed', 'captions', 'quality', 'loop']
   };
