--- a/views/media.pug
+++ b/views/media.pug
@@ -482,7 +482,8 @@ block extra_footer_js
   script.
 
     $(document).ready(function () {
-      window.scrollTo(0, 21);
+      // old scroll down to change the header
+      //window.scrollTo(0, 21);
 
 
       $('.plyr').focus()
@@ -545,7 +546,8 @@ block extra_footer_js
 
   script.
       setTimeout(function(){
-        window.scrollTo(0, 22);
+        // old code to change scroll to
+        // window.scrollTo(0, 22);
 
 
       }, 1000)
