--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -349,11 +349,10 @@ script.
 
 
     div.search-bar(style="width:45%;margin-left:200px;")
-      form.search-form(name="searchForm" method='POST' action="/search")
-        input(type='hidden', name='_csrf', value=_csrf)
-        input(type='text', placeholder='Search' name='searchValue' value=searchValue || "")
-        button.searchButton(style="right:76px")
-          i.fas.fa-search.searchIcon
+      input(type='hidden', name='_csrf', value=_csrf)
+      input.search-query-input(type='text', placeholder='Search' name='searchValue' value=searchValue || "")
+      button.search-uploads-button.searchButton(style="right:76px")
+        i.fas.fa-search.searchIcon
 
     // UPGRADE ICON
     //a(href="#" style="position: absolute;top: 21px;right: 325px;")
@@ -422,4 +421,37 @@ script.
     console.log(headroom);
 
     console.log("ready!");
+  });
+
+
+script.
+  $(document).ready(function () {
+
+    console.log('lets')
+
+    var orderBy = '#{orderBy}'
+    var mediaType = '#{mediaType}'
+    var searchQuery = '#{searchQuery}'
+    var searchType = '#{searchType}' // upload or user
+
+    console.log(orderBy, mediaType, searchQuery, searchType)
+
+    if (!orderBy) {
+      orderBy = 'newToOld'
+    }
+
+
+    console.log(orderBy, mediaType, searchQuery, searchType)
+
+    $('.search-query-input').focus();
+
+
+    // capture submit
+    $('.search-uploads-button').click(function () {
+
+      var userSearchQuery = $('.search-query-input').val()
+
+      window.location = '/search?orderBy=' + orderBy + '&mediaType=' + mediaType + '&searchQuery=' + userSearchQuery + '&searchType=' + searchType
+    });
+
   });
