--- a/views/layout.pug
+++ b/views/layout.pug
@@ -66,7 +66,7 @@ html
     // I feel like this is here and breaks if you move it
     include viewPartials/darkLightMode
 
-    .container(style="max-width:100%;padding-left: 0px; padding-right: 0px;")
+    .container(style="max-width:1250px;padding-left: 0px; padding-right: 0px;")
       include layoutPartials/sidebar
 
       include layoutPartials/flash
