--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -118,7 +118,10 @@ style.
   }
 
   /* anything below this width */
-  @media (max-width: 961px) {
+  @media (min-width: 1250px) {
+    body {
+      zoom: 1.15;
+    }
     /*.postButton {*/
     /*display: none !important;*/
     /*}*/
