--- a/views/media.pug
+++ b/views/media.pug
@@ -40,6 +40,10 @@ block content
             display: none;
         }
 
+        .container {
+            max-width: 100% !important;
+        }
+
     br
     div.center-block.text-center.col-sm-12(style="overflow-x: hidden;margin-top:-21px;background-color:black;")
         if upload.status == 'processing'
@@ -61,7 +65,7 @@ block content
         br
         // if it's a video that's finished processing
         if upload.fileType === 'video' && !upload.status !== 'processing'
-            div.display-div.magnetic(style="min-width:50%;min-height:50%;margin:0 auto;")
+            div.display-div.magnetic(style="min-width:50%;min-height:50%;margin:0 auto;margin-top: -25px;")
                 // margin-top:46px;
 
                 video#media_player.display-element(playsinline poster=`${serverToUse}/${upload.uploader.channelUrl}/${upload.thumbnails.generated || upload.thumbnails.medium}` controls='', style="max-width:100%;background-color:black;")
