--- a/views/media.pug
+++ b/views/media.pug
@@ -402,6 +402,13 @@ block content
                                 else
                                     p No commenter
 
+            div
+                br
+                br
+                br
+                div.col-sm-12
+                    p #{upload.description}
+
 
 block extra_js
   //script(src='https://checkout.stripe.com/checkout.js')
