--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -24,7 +24,7 @@ style.
 
     /* The sidebar links */
     .sidebar a {
-        padding: 8px 8px 8px 32px;
+        padding: 0px 8px 4px 32px;
         text-decoration: none;
         font-size: 14px;
         color: #818181;
@@ -200,29 +200,36 @@ style.
     }
 
 
+
+
+
+
+
+// LEFT SIDEBAR
 #mySidebar.sidebar(style="text-align:left;margin-left:-2px;overflow-y: hidden;")
     div(style="margin-top:27px")
 
-    a(href='https://newtube.app/paypal' style="color:#007bff;")
-        i.ib.fas.fa-dollar-sign
-        p.ib &nbsp Donate &nbsp
-
-
-
+    // user signed in but not paid, prompt to pay
     if user && user.plan == 'free'
         a(href='/account?to=nt-plus' style="color:#007bff;")
 
             i.ib.fas.fa-plus
             p.ib &nbsp Upgrade &nbsp
 
+    else if user && user.plan !== 'free'
+        // dont do anything, user is signed in and free
     else
 
-        a(href='/signin' style="color:#007bff;") Sign In
+        // user needs to login
+        a(href='/login' style="color:#007bff;")
+            i.fa.fa-sign-in(aria-hidden='true')
+            p.ib &nbsp Sign In &nbsp
+
+        hr(style="margin-top:0px")
+
 
         //a(href='/newtube.app/paypal' style="color:#007bff;") Sign Up
 
-
-    hr
 
     // link to popular by categories
     a(href='/media/popular/1?media=all&category=overview&within=24hour' style="")
@@ -259,10 +266,33 @@ style.
         i.ib.fa.fa-question-circle(aria-hidden='true')
         p.ib About Us &nbsp
 
+    a(href='https://newtube.app/paypal' style="color:#007bff;")
+        i.ib.fas.fa-dollar-sign
+        p.ib &nbsp Donate &nbsp
 
-// ACCOUNT DROPDOWN FUNCTIONALITY
+    if user
+        hr
+
+        a(href='/logout')
+            i.fa.fa-sign-out(aria-hidden='true')
+            p.ib &nbsp Sign Out &nbsp
+
+
+// END LEFT SIDEBAR
+
+
+
+
+
+
+
+
+
+
+// RIGHT SIDE DROPDOWN WITH USER RELATED FUNCTIONALITY
 .accountDropdown#accountDropdown(style="display:none;text-align:left;border: 1px solid #cec0c0;box-shadow:-8px -9px 10px -10px rgba(0,0,0,0.51);border-radius:3px;")
     .userDetails
+        // USER SECTION
         if user
             a(href='/user/' + user.channelUrl)
                 if user.customThumbnail
@@ -271,26 +301,47 @@ style.
                     img.center-block.text-center(src=`${uploadServer}/${user._id}/unique.png` style="width: 34px;display:inline-block;margin-left:15px;border-radius:15px;position: absolute;top: 15px;right: 149px;")
 
                 p(style="font-size: 13px;position: absolute;left:65px;top: 15px;") #{user.displayName}
-                p(style="font-size: 18px;position: absolute;top: 32px;color: grey;left:63px;") #{user.channelUrl || user.channelName}
+                p(style="font-size: 18px;position: absolute;top: 19px;color: grey;left:63px;") #{user.channelUrl || user.channelName}
 
 
-        // if there's no user, prompt them to sign up, otherwise prompt them to upgrade to plus
+
+
+        // if there's no user, prompt them to sign up,
         if !user
             a(href="/signup" style="color:#007bff")
-                h7(style="position: absolute;top: 60px;right: 132px;font-size: 13px;") Sign Up
+                h7(style="position: absolute;top: 60px;right: 105px;font-size: 13px;")
+                    i.ib.fa.fa-sign-in
+                    p.ib Sign Up &nbsp
             // otherwise prompt them to upgrade to plus
         else
             a(href="/account?to=nt-plus" style="color:#007bff")
-                h7(style="position: absolute;top: 70px;right: 132px;font-size: 13px;") Upgrade
+                h7.ib(style="position: absolute;top: 70px;right: 105px;font-size: 13px;")
+                    i.ib.fas.fa-plus
+                    p.ib &nbsp Upgrade &nbsp
+
     div(style="padding-top:57px")
 
     if user
         hr
-        a(href='/upload') New Upload
-        a(href='/account') Account
-        a(href='/user/' + user.channelUrl) Channel
+        a(href='/upload')
+            i.ib.fas.fa-upload
+            p.ib &nbsp New Upload
+
+        a(href='/account')
+            i.ib.fas.fa-user
+            p.ib &nbsp Account
+
+        a(href='/user/' + user.channelUrl)
+            i.ib.fa.fa-video
+            p.ib &nbsp Channel
+
+
         hr
 
         //a(href='#') Help
-        a(href='/logout') Sign out
+        //a(href='/logout') Sign out
+
+        a(href='/logout/')
+            i.ib.fa.fa-sign-in
+            p.ib &nbsp Sign Out
 
