--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -318,10 +318,11 @@ style.
       //a(href="#" style="position: absolute;top: 19px;right: 280px;")
       //    img(src="/bell-angle.png" style="width:29px;display:inline-block;margin-left:15px;")
 
-      a(href="https://newtube.app/paypal" style="position: absolute;top: 13px;right: 79px;")
+
+      a(href="/upload" style="position: absolute;top: 13px;right: 79px;")
         div.postButton(style="display:inline-block;border: 1px solid black;padding: 9px 36px;margin-left:15px;border-radius: 3px;background-color: white;" data-toggle='modal', data-target='#exampleModal')
           //a(href="/donate")
-          h7(style="display:inline-block;color:black;") Donate
+          h7(style="display:inline-block;color:black;") Upload
 
         div.postIcon(style="display:none;" data-toggle='modal', data-target='#exampleModal')
           img(src="/images/whiteDollarIcon.png" style="width:25px;margin-top:9px;")
